--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/игорь_демьяненко.jpg" alt="Игорь Демьяненко" width="270" />
+            <img src="./images/ighor-demyanenko.jpg" alt="Игорь Демьяненко" width="270" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/ольга_репина.jpg" alt="Ольга Репина" width="270" />
+            <img src="./images/olha-repina.jpg alt="Ольга Репина" width="270" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/николай_тарасов.jpg" alt="Николай Тарасов" width="270" />
+            <img src="./images/nikolai-tarasov.jpg" alt="Николай Тарасов" width="270" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/михаил_ермаков.jpg" alt="Михаил Ермаков" width="270" />
+            <img src="./images/mihail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
