Добавляет alt к изображениям

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./images/box1.jpg" alt="" width="370" /></li>
-          <li><img src="./images/box2.jpg" alt="" width="370" /></li>
-          <li><img src="./images/box3.jpg" alt="" width="370" /></li>
+          <li><img src="./images/box1.jpg" alt="написание кода" width="370" /></li>
+          <li><img src="./images/box2.jpg" alt="разработка мобильных приложений" width="370" /></li>
+          <li><img src="./images/box3.jpg" alt="дизайн" width="370" /></li>
         </ul>
       </section>
 
@@ -78,7 +78,7 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/olha-repina.jpg alt="Ольга Репина" width="270" />
+            <img src="./images/olha-repina.jpg" alt="Ольга Репина" width="270" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
